--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -32,7 +32,7 @@
         <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
             <h:outputText>
                 <h:form>
-                    <h:link id="editProcess" outcome="/pages/processEdit"
+                    <h:link id="editProcess" outcome="/pages/templateEdit"
                             title="#{msgs.editTemplate}">
                         <i class="fa fa-pencil-square-o fa-lg"/>
                         <f:param name="id" value="#{item.id}"/>
