Rename tabs on page 'processEdit'

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -19,7 +19,7 @@
     <p:dataTable var="item"
                  id="propertyTable"
                  value="#{ProzessverwaltungForm.properties}">
-        <p:column headerText="#{msgs.titel}">
+        <p:column headerText="#{msgs.eigenschaft}">
             <h:outputText value="#{item.title}"/>
         </p:column>
         <p:column headerText="#{msgs.value}">
