--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
@@ -19,7 +19,7 @@
     <p:dataTable id="templatePropertyTable"
                  var="property"
                  value="#{ProzessverwaltungForm.templates}">
-        <p:column headerText="#{msgs.titel}">
+        <p:column headerText="#{msgs.eigenschaft}">
             <h:outputText value="#{property.title}"/>
         </p:column>
         <p:column headerText="#{msgs.value}">
