--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
@@ -18,7 +18,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:dataTable id="workpiecePropertyTable" var="property"
                  value="#{ProzessverwaltungForm.workpieces}">
-        <p:column headerText="#{msgs.titel}">
+        <p:column headerText="#{msgs.eigenschaft}">
             <h:outputText value="#{property.title}"/>
         </p:column>
         <p:column headerText="#{msgs.value}">
