--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/head.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/head.xhtml
@@ -23,4 +23,7 @@
     <h:outputStylesheet library="webjars" name="font-awesome/4.7.0/css/font-awesome-jsf.css"/>
 
     <link rel="shortcut icon" href="#{resource['images/favicon.ico']}" type="image/x-icon" />
+
+    <h:outputScript name="menu.js" target="body" library="js"/>
+
 </ui:composition>
