--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -33,7 +33,7 @@
 
         <section id="portal-nav">
             <nav id="header-nav" role="navigation">
-                <ul>
+                <ul id="menu">
                     <li>
                         <!-- List: my tasks -->
                         <c:set var="tasks" value="#{AktuelleSchritteForm.tasksInProgress}"/>
